// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success conditions Smoke test 1`] = `
Array [
  Object {
    "name": "Checkout",
    "uses": "actions/checkout@v3",
    "with": Object {},
  },
  Object {
    "name": "Setup Node.js",
    "uses": "actions/setup-node@v3",
    "with": Object {
      "cache": "yarn",
      "node-version": "latest",
    },
  },
  Object {
    "name": "Install dependencies",
    "run": "yarn install --check-files --frozen-lockfile",
  },
  Object {
    "name": "build",
    "run": "npx projen build",
  },
]
`;

exports[`success conditions With NPM 1`] = `
Array [
  Object {
    "name": "Checkout",
    "uses": "actions/checkout@v3",
    "with": Object {},
  },
  Object {
    "name": "Setup Node.js",
    "uses": "actions/setup-node@v3",
    "with": Object {
      "cache": "npm",
      "node-version": "latest",
    },
  },
  Object {
    "name": "Install dependencies",
    "run": "npm ci",
  },
  Object {
    "name": "build",
    "run": "npx projen build",
  },
]
`;

exports[`success conditions With PNPM 1`] = `
Array [
  Object {
    "name": "Checkout",
    "uses": "actions/checkout@v3",
    "with": Object {},
  },
  Object {
    "name": "Setup pnpm",
    "uses": "pnpm/action-setup@v2.2.4",
    "with": Object {
      "version": "8",
    },
  },
  Object {
    "name": "Setup Node.js",
    "uses": "actions/setup-node@v3",
    "with": Object {
      "cache": "pnpm",
      "node-version": "latest",
    },
  },
  Object {
    "name": "Install dependencies",
    "run": "pnpm i --frozen-lockfile",
  },
  Object {
    "name": "build",
    "run": "npx projen build",
  },
]
`;

exports[`success conditions With Yarn 1`] = `
Array [
  Object {
    "name": "Checkout",
    "uses": "actions/checkout@v3",
    "with": Object {},
  },
  Object {
    "name": "Setup Node.js",
    "uses": "actions/setup-node@v3",
    "with": Object {
      "cache": "yarn",
      "node-version": "latest",
    },
  },
  Object {
    "name": "Install dependencies",
    "run": "yarn install --check-files --frozen-lockfile",
  },
  Object {
    "name": "build",
    "run": "npx projen build",
  },
]
`;

exports[`success conditions With Yarn 2 1`] = `
Array [
  Object {
    "name": "Checkout",
    "uses": "actions/checkout@v3",
    "with": Object {},
  },
  Object {
    "name": "Setup Node.js",
    "uses": "actions/setup-node@v3",
    "with": Object {
      "cache": "yarn",
      "node-version": "latest",
    },
  },
  Object {
    "name": "Install dependencies",
    "run": "yarn install --immutable",
  },
  Object {
    "name": "build",
    "run": "npx projen build",
  },
]
`;
